harmonizing statemachines